Rename Catalyst Export Inspector to Export Inspector

--- a/Applications/ParaView/ParaViewMainWindow.ui
+++ b/Applications/ParaView/ParaViewMainWindow.ui
@@ -271,7 +271,7 @@
     <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
    </property>
    <property name="windowTitle">
-    <string>Catalyst Export Inspector</string>
+    <string>Export Inspector</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>1</number>
