Rename CatalystExportInspector files to ExportInspector

--- a/Qt/ApplicationComponents/Resources/UI/pqExportInspector.ui
+++ b/Qt/ApplicationComponents/Resources/UI/pqExportInspector.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>CatalystExportInspector</class>
- <widget class="QWidget" name="CatalystExportInspector">
+ <class>ExportInspector</class>
+ <widget class="QWidget" name="ExportInspector">
   <property name="geometry">
    <rect>
     <x>0</x>
