--- a/Applications/ParaView/ParaViewMainWindow.ui
+++ b/Applications/ParaView/ParaViewMainWindow.ui
@@ -506,9 +506,9 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>pqCatalystExportInspector</class>
+   <class>pqExportInspector</class>
    <extends>QWidget</extends>
-   <header>pqCatalystExportInspector.h</header>
+   <header>pqExportInspector.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
