--- a/Qt/Components/Resources/UI/pqCameraDialog.ui
+++ b/Qt/Components/Resources/UI/pqCameraDialog.ui
@@ -35,9 +35,9 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>0</y>
-        <width>404</width>
-        <height>693</height>
+        <y>-11</y>
+        <width>390</width>
+        <height>704</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -547,6 +547,20 @@
            </property>
            <property name="text">
             <string>Save</string>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="0">
+          <widget class="QLabel" name="label_8">
+           <property name="text">
+            <string>Eye Angle</string>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="1">
+          <widget class="QDoubleSpinBox" name="eyeAngle">
+           <property name="toolTip">
+            <string>The separation between eyes (in degrees). This is used when rendering in stereo mode.</string>
            </property>
           </widget>
          </item>
