--- a/Plugins/OpenVR/pqOpenVRDockPanel.ui
+++ b/Plugins/OpenVR/pqOpenVRDockPanel.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>pvOpenVRDockPanel</class>
- <widget class="QWidget" name="pvOpenVRDockPanel">
+ <class>pqOpenVRDockPanel</class>
+ <widget class="QWidget" name="pqOpenVRDockPanel">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -107,44 +107,6 @@
          </widget>
         </item>
        </layout>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_2">
-        <item>
-         <widget class="QLineEdit" name="editableField">
-          <property name="enabled">
-           <bool>true</bool>
-          </property>
-          <property name="toolTip">
-           <string extracomment="What scalar field can be edited in VR. This is an advanced feature still in development. You must specify field values below for this to work and the editable field specified must be a scalar array present in your data."/>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="scalarFieldLabel">
-          <property name="text">
-           <string>Editable Field</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <widget class="QLabel" name="fieldValuesLabel">
-        <property name="text">
-         <string>Field Values</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="fieldValues">
-        <property name="toolTip">
-         <string extracomment="The options available when editing a field in VR. These values, text or numeric will be stored in the currently selected point/cell for the specified editable field array above. This is in development."/>
-        </property>
-        <property name="text">
-         <string>Yes, No</string>
-        </property>
-       </widget>
       </item>
       <item>
        <widget class="Line" name="line">
