Update the openvr plugin for newer ParaView/VTK
Include support for physical based rendering setttings

Fix an issue with the PV VR dialog rnadomly showing up
due to battery level events from the controllers

Improve the export as view function to not encode the
binary data files and to export textures with parameters
such as repeat/mipmap/etc.

Make the skybox be interpolated by default. No reason
not to and every reason to do it.

Update clang format as newer versions of clang have different
settings for mozilla style.

--- a/Plugins/OpenVR/pqOpenVRControls.ui
+++ b/Plugins/OpenVR/pqOpenVRControls.ui
@@ -100,10 +100,10 @@
          </size>
         </property>
         <property name="currentText">
-         <string>Grab</string>
+         <string>Probe</string>
         </property>
         <property name="currentIndex">
-         <number>1</number>
+         <number>3</number>
         </property>
         <item>
          <property name="text">
@@ -171,7 +171,7 @@
          </size>
         </property>
         <property name="text">
-         <string>Exit</string>
+         <string>Exit VR</string>
         </property>
        </widget>
       </item>
@@ -236,8 +236,8 @@ font: 75 12pt &quot;Arial&quot;;</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>698</width>
-            <height>645</height>
+            <width>98</width>
+            <height>28</height>
            </rect>
           </property>
          </widget>
