Larger icon size for render view toolbar.
Icons in the render view window toolbar were forced to 12 pixels.
Double to 24 pixels, which is still smaller than the main toolbars
on most displays. Add 24 pixel icons for the split view controls.

Helps tremendously on high-dpi displays, where 12 pixel icons are
completely illegible.

--- a/Qt/Components/Resources/pqComponents.qrc
+++ b/Qt/Components/Resources/pqComponents.qrc
@@ -229,6 +229,8 @@
         <file>Icons/pqSource32.png</file>
         <file>Icons/pqSplitViewH12.png</file>
         <file>Icons/pqSplitViewV12.png</file>
+        <file>Icons/pqSplitViewH24.png</file>
+        <file>Icons/pqSplitViewV24.png</file>
         <file>Icons/pqSpreadsheet16.png</file>
         <file>Icons/pqStep16.png</file>
         <file>Icons/pqStep24.png</file>
