Improve save preset
  * allow to choose a name
  * signal tell preset name

--- a/Qt/Components/Resources/pqComponents.qrc
+++ b/Qt/Components/Resources/pqComponents.qrc
@@ -142,6 +142,7 @@
         <file>Icons/pqSave.svg</file>
         <file>Icons/pqSaveAnimation.svg</file>
         <file>Icons/pqSaveArray16.png</file>
+        <file>Icons/pqSaveAs.svg</file>
         <file>Icons/pqSaveState.svg</file>
         <file>Icons/pqSaveTable32.png</file>
         <file>Icons/pqSaveWindow.svg</file>
