--- a/Qt/ApplicationComponents/Resources/UI/pqColorAnnotationsWidget.ui
+++ b/Qt/ApplicationComponents/Resources/UI/pqColorAnnotationsWidget.ui
@@ -98,7 +98,21 @@
         <iconset resource="../../../Components/Resources/pqComponents.qrc">
          <normaloff>:/pqWidgets/Icons/pqSave.svg</normaloff>:/pqWidgets/Icons/pqSave.svg</iconset>
        </property>
-       </widget>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="SaveAsNewPreset">
+       <property name="toolTip">
+        <string>Save to new preset</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../../../Components/Resources/pqComponents.qrc">
+         <normaloff>:/pqWidgets/Icons/pqSaveAs.svg</normaloff>:/pqWidgets/Icons/pqSaveAs.svg</iconset>
+       </property>
+      </widget>
      </item>
      <item>
       <spacer name="verticalSpacer">
